Proposal: Corrected professors suggestions  . Godot: Started edge crossing minimization algorithm development.

--- a/Propuesta/proposal.tex
+++ b/Propuesta/proposal.tex
@@ -44,6 +44,10 @@ GeeksForGeeks
 [https://www.youtube.com/c/GeeksforGeeksVideos/], sin embargo,
 al tratarse de plataformas de videos, no han entregado interactividad al usuario para
 ejercer un rol más activo en su aprendizaje.
+Un último ejemplo destacable aplicado a Computación es Scratch, un lenguaje de programación por bloques
+hecho especialmente para enseñar programación a infantes y adolescentes a través de visualizaciones y acciones,
+ofreciendo gran interactividad [https://scratch.mit.edu/].
+
 
 \subsection{ Estrategia A}
 
@@ -79,6 +83,9 @@ es una herramienta que mejora los resultados de los estudiantes que la ocupan.
 
 H2: Una plataforma de visualización interactiva de algoritmos de grafos
 genera mayor interés en el estudiantado.
+
+Se entienden mejores resultados como mejores notas en evaluaciones estándares
+realizadas por los equipos docentes a cargo del ramo.
 
 Se entiende interés como una medida subjetiva de cuánto un usuario desea
 aprender sobre un tema en particular. 
