--- a/Propuesta/generic.bib
+++ b/Propuesta/generic.bib
@@ -1,13 +1,4 @@
-@article{collins2003circle,
-  title={A circle packing algorithm},
-  author={Collins, Charles R and Stephenson, Kenneth},
-  journal={Computational Geometry},
-  volume={25},
-  number={3},
-  pages={233--256},
-  year={2003},
-  publisher={Elsevier}
-}
+
 @article{hopper2001empirical,
   title={An empirical investigation of meta-heuristic and heuristic algorithms for a 2D packing problem},
   author={Hopper, EBCH and Turton, Brian CH},
@@ -18,91 +9,61 @@
   year={2001},
   publisher={Elsevier}
 }
-@incollection{feng2002advancing,
-  title={An advancing front packing of polygons, ellipses and spheres},
-  author={Feng, YT and Han, K and Owen, DRJ},
-  booktitle={Discrete Element Methods: Numerical Modeling of Discontinua},
-  pages={93--98},
-  year={2002}
-}
-@incollection{porosity,
-  title={Fundamentals of Fluid Flow in Porous Media},
-  author={Apostolos Kantzas, Jonathan Bryan, Saeed Taheri},
-  booktitle={Porosity},
-  publisher={Perm Inc. TIPM Laboratory},
-  chapter=2
+
+@Article{active_learning_review,
+AUTHOR = {Hartikainen, Susanna and Rintala, Heta and Pylväs, Laura and Nokelainen, Petri},
+TITLE = {The Concept of Active Learning and the Measurement of Learning Outcomes: A Review of Research in Engineering Higher Education},
+JOURNAL = {Education Sciences},
+VOLUME = {9},
+YEAR = {2019},
+NUMBER = {4},
+ARTICLE-NUMBER = {276},
+URL = {https://www.mdpi.com/2227-7102/9/4/276},
+ISSN = {2227-7102},
+ABSTRACT = {Active learning has gained growing political, instructional, and research interest. However, the definitions of active learning are wide. The learning outcomes related to it have been mostly positive but the measurement methods are not without problems. This review provides an overview of active learning, especially in the context of engineering higher education, by answering two research questions: (1) How is the concept of active learning defined and justified in engineering higher education research? (2) What are the learning outcomes connected to active learning and how is learning measured in engineering higher education research? Sixty-six empirical articles were analyzed inductively with qualitative content analysis. The analysis showed that active learning was defined in various ways, and in some articles, it was not defined at all. In addition, justification (theoretical or empirical) for the use of active learning was seldomly reported. Finally, the indicators used to measure the impact of active learning on students&rsquo; learning outcomes were mostly based on students&rsquo; self-report data and focused on course specific development in subject-related knowledge. More thorough descriptions and theoretical justifications, as well as the consideration of learning outcomes with appropriate research methods, could reinforce the transparency of empirical interventions and the application of active learning.},
+DOI = {10.3390/educsci9040276}
 }
 
-@article{orick2017linearized,
-  title={A linearized circle packing algorithm},
-  author={Orick, Gerald L and Stephenson, Kenneth and Collins, Charles},
-  journal={Computational Geometry},
-  volume={64},
-  pages={13--29},
-  year={2017},
-  publisher={Elsevier}
-}
-@article{feng2003filling,
-  title={Filling domains with disks: an advancing front approach},
-  author={Feng, YT and Han, K and Owen, DRJ},
-  journal={International Journal for Numerical Methods in Engineering},
-  volume={56},
-  number={5},
-  pages={699--713},
-  year={2003},
-  publisher={Wiley Online Library}
+@article{active_learning_versus_feeling_of_learning,
+  title={Measuring actual learning versus feeling of learning in response to being actively engaged in the classroom},
+  author={Deslauriers, Louis and McCarty, Logan S and Miller, Kelly and Callaghan, Kristina and Kestin, Greg},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={116},
+  number={39},
+  pages={19251--19257},
+  year={2019},
+  publisher={National Acad Sciences}
 }
 
-@article{agarwal2002polygon,
-  title={Polygon decomposition for efficient construction of Minkowski sums},
-  author={Agarwal, Pankaj K and Flato, Eyal and Halperin, Dan},
-  journal={Computational Geometry},
-  volume={21},
-  number={1-2},
-  pages={39--61},
-  year={2002},
-  publisher={Elsevier}
+@article{petri2018method,
+  title={A method for the evaluation of the quality of games for computing education},
+  author={Petri, Giani and others},
+  year={2018}
+}
+@article{petri2018meegaplus,
+  title={MEEGA+: A method for the evaluation of educational games for computing education},
+  author={Petri, Giani and von Wangenheim, Christiane Gresse and Borgatto, Adriano Ferreti},
+  journal={INCoD--Brazilian Institute for Digital Convergence},
+  pages={1--47},
+  year={2018}
 }
 
-@article{thurston1978geometry,
-  title={The geometry and topology of 3-manifolds},
-  author={Thurston, William},
-  journal={Lecture note},
-  year={1978},
-  publisher={Princeton Univ.}
+@article{using_videogames_maths,
+  title={Using video games to combine learning and assessment in mathematics education},
+  author={Kiili, Kristian and Devlin, Keith and Perttula, Arttu and Tuomi, Pauliina and Lindstedt, Antero},
+  journal={International Journal of Serious Games},
+  volume={2},
+  number={4},
+  pages={37--55},
+  year={2015}
 }
 
-@article{mohar1993polynomial,
-  title={A polynomial time circle packing algorithm},
-  author={Mohar, Bojan},
-  journal={Discrete Mathematics},
-  volume={117},
-  number={1-3},
-  pages={257--263},
-  year={1993},
-  publisher={Elsevier}
-}
-
-@article{bennell2009tutorial,
-  title={A tutorial in irregular shape packing problems},
-  author={Bennell, Julia A and Oliveira, Jos{\'e} F},
-  journal={Journal of the Operational Research Society},
-  volume={60},
-  number={1},
-  pages={S93--S105},
-  year={2009},
-  publisher={Springer}
-}
-
-@article{gomes2006solving,
-  title={Solving irregular strip packing problems by hybridising simulated annealing and linear programming},
-  author={Gomes, A Miguel and Oliveira, Jos{\'e} F},
-  journal={European Journal of Operational Research},
-  volume={171},
-  number={3},
-  pages={811--829},
-  year={2006},
-  publisher={Elsevier}
+@inproceedings{evaluation_of_games_for_teaching_cs,
+  title={Evaluation of games for teaching computer science},
+  author={Gibson, Ben and Bell, Tim},
+  booktitle={Proceedings of the 8th Workshop in Primary and Secondary Computing Education},
+  pages={51--60},
+  year={2013}
 }
 
 @mastersthesis{voronoiLibrary,
