Upload advances after revision with professor

--- a/Propuesta/generic.bib
+++ b/Propuesta/generic.bib
@@ -1,14 +1,4 @@
 
-@article{hopper2001empirical,
-  title={An empirical investigation of meta-heuristic and heuristic algorithms for a 2D packing problem},
-  author={Hopper, EBCH and Turton, Brian CH},
-  journal={European Journal of Operational Research},
-  volume={128},
-  number={1},
-  pages={34--57},
-  year={2001},
-  publisher={Elsevier}
-}
 
 @Article{active_learning_review,
 AUTHOR = {Hartikainen, Susanna and Rintala, Heta and Pylväs, Laura and Nokelainen, Petri},
@@ -66,12 +56,150 @@ DOI = {10.3390/educsci9040276}
   year={2013}
 }
 
-@mastersthesis{voronoiLibrary,
-  title={Virtual element method for linear method for linear elasticity problems in modifiable meshes},
-  author={\'{A}lvarez Inostroza, Catalina Paz},
-  school={Universidad de Chile},
-  booktitle={Voronoi generation library},
-  chapter={5.1},
-  pages={72--87},
-  year={2017}
+@article{video_game_foster_computational_thinking,
+  title={Can playing a video game foster computational thinking skills?},
+  author={Zhao, Weinan and Shute, Valerie J},
+  journal={Computers \& Education},
+  volume={141},
+  pages={103633},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@inproceedings{abstract_thinking_cs,
+  title={Defining the competence of abstract thinking and evaluating CS-students' level of abstraction},
+  author={Zehetmeier, Daniela and B{\"o}ttcher, Axel and Br{\"u}ggemann-Klein, Anne and Thurner, Veronika},
+  booktitle={Proceedings of the 52nd Hawaii International Conference on System Sciences},
+  year={2019}
+}
+
+@book{fundamentals_software_abstract,
+  title={Fundamentals of software engineering},
+  author={Ghezzi, Carlo and Jazayeri, Mehdi and Mandrioli, Dino},
+  year={1991},
+  publisher={Prentice-Hall, Inc.}
+}
+
+@article{wingresearch_abstract,
+  title={Research notebook: Computational thinking—What and why},
+  author={Wing, Jeanette},
+  journal={The link magazine},
+  volume={6},
+  pages={20--23},
+  year={2011}
+}
+
+@article{programming_education,
+  title={Mapping computational thinking through programming in K-12 education: A conceptual model based on a systematic literature Review},
+  author={Tikva, Christina and Tambouris, Efthimios},
+  journal={Computers \& Education},
+  volume={162},
+  pages={104083},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@book{games_makes_us_better,
+  title={Reality is broken: Why games make us better and how they can change the world},
+  author={McGonigal, Jane},
+  year={2011},
+  publisher={Penguin}
+}
+
+@article{barab2009transformational,
+  title={Transformational play as a curricular scaffold: Using videogames to support science education},
+  author={Barab, Sasha A and Scott, Brianna and Siyahhan, Sinem and Goldstone, Robert and Ingram-Goble, Adam and Zuiker, Steven J and Warren, Scott},
+  journal={Journal of Science Education and Technology},
+  volume={18},
+  number={4},
+  pages={305--320},
+  year={2009},
+  publisher={Springer}
+}
+
+@article{wuscastle,
+  title={Experimental evaluation of an educational game for improved learning in introductory computing},
+  author={Eagle, Michael and Barnes, Tiffany},
+  journal={ACM SIGCSE Bulletin},
+  volume={41},
+  number={1},
+  pages={321--325},
+  year={2009},
+  publisher={ACM New York, NY, USA}
+}
+
+ @misc{CodeCombat,
+  title={CodeCombat: Coding games to learn python and JavaScript}, 
+  howpublished = {\url{https://www.codecombat.com/}}, 
+  journal={CodeCombat}, 
+  publisher={CodeCombat}, 
+  note = {Accessed: 2022-May-20}
+} 
+
+@inproceedings{codespells,
+  title={CodeSpells: bridging educational language features with industry-standard languages},
+  author={Esper, Sarah and Foster, Stephen R and Griswold, William G and Herrera, Carlos and Snyder, Wyatt},
+  booktitle={Proceedings of the 14th Koli calling international conference on computing education research},
+  pages={05--14},
+  year={2014}
+}
+
+@inproceedings{minicolon,
+  title={MiniColon; teaching kids computational thinking using an interactive serious game},
+  author={Ayman, Reham and Sharaf, Nada and Ahmed, Ghada and Abdennadher, Slim},
+  booktitle={Joint International Conference on Serious Games},
+  pages={79--90},
+  year={2018},
+  organization={Springer}
+}
+
+@article{maloney2010scratch,
+  title={The scratch programming language and environment},
+  author={Maloney, John and Resnick, Mitchel and Rusk, Natalie and Silverman, Brian and Eastmond, Evelyn},
+  journal={ACM Transactions on Computing Education (TOCE)},
+  volume={10},
+  number={4},
+  pages={1--15},
+  year={2010},
+  publisher={ACM New York, NY, USA}
+}
+
+@misc{scratch,
+  title={Scratch: Learn Programming with blocks}, 
+  howpublished = {\url{https://scratch.mit.edu/}}, 
+  publisher={MIT}, 
+  note = {Accessed: 2022-May-20}
+} 
+
+@inproceedings{LightBot,
+  author={Gouws, Lindsey Ann and Bradshaw, Karen and Wentworth, Peter},
+  title={Computational thinking in educational activities: an evaluation of the educational game light-bot},
+  booktitle={Proceedings of the 18th ACM conference on Innovation and technology in computer science education},
+  pages={10--15},
+  year={2013}
+}
+
+@inproceedings{RoboBuilder,
+  title={RoboBuilder: A program-to-play constructionist video game},
+  author={Weintrop, David and Wilensky, Uri},
+  booktitle={Proceedings of the constructionism 2012 conference. Athens, Greece},
+  year={2012}
+}
+
+@article{effectiveness_gbl,
+  title={A pilot study on the effectiveness and acceptance of an educational game for teaching programming concepts to primary school students},
+  author={Giannakoulas, Andreas and Xinogalos, Stelios},
+  journal={Education and Information Technologies},
+  volume={23},
+  number={5},
+  pages={2029--2052},
+  year={2018},
+  publisher={Springer}
+}
+
+@misc{Blockly,
+title={Blockly},
+author={Fraser, N},
+year={2013},
+url={https://developers.google.com/blockly/:Google}
 }
