Future Work on thesis

--- a/ReunionesYAvances/generic.bib
+++ b/ReunionesYAvances/generic.bib
@@ -203,3 +203,12 @@ author={Fraser, N},
 year={2013},
 url={https://developers.google.com/blockly/:Google}
 }
+
+@mastersthesis{VideojuegoEjercitacionAritmeticaPUC,
+  author  = {Wurman Ventura, G.},
+  school  = {Pontificia Universidad Catolica de Chile},
+  title   = {Desarrollo de videojuego de ejercitación aritmética para un computador interpersonal usando un mouse por niño en la sala de clases.},
+  year    = {2013},
+  url     = {https://repositorio.uc.cl/handle/11534/2876},
+  doi     = {https://doi.org/10.7764/tesisUC/ING/2876},
+}
